# Gravitix

./: Cargo.toml  LICENSE  README.md
examples/: antispam_bot.grav  hello_bot.grav  todo_bot.grav
src/: ast.rs  error.rs  fmt.rs  lexer.rs  lsp.rs  main.rs  parser.rs  value.rs
src/bot/: backend.rs  mod.rs  runner.rs  scheduler.rs  telegram.rs
src/interpreter/: dispatch.rs  env.rs  eval.rs  exec.rs  mod.rs
src/stdlib/: ai.rs  calculus.rs  collections.rs  complex.rs  convert.rs  crypto.rs  db.rs  http.rs  io.rs  json.rs  linalg.rs  math.rs  mod.rs  number_theory.rs  regex_fns.rs  special_fns.rs  state_fns.rs  stats.rs  strings.rs  time.rs  transforms.rs  utils.rs  vortex.rs
