[package]
name        = "gravitix"
version     = "0.1.0"
edition     = "2021"
description = "Gravitix — fast scripting language for bots"
license     = "MIT"

[[bin]]
name = "gravitix"
path = "src/main.rs"

[dependencies]
tokio        = { version = "1",    features = ["full"] }
reqwest      = { version = "0.11", features = ["json"] }
serde        = { version = "1",    features = ["derive"] }
serde_json   = "1"
regex        = "1"
thiserror    = "1"
clap         = { version = "4", features = ["derive"] }
colored      = "2"
dashmap      = "5"            # fast concurrent hashmap for handler registry
once_cell    = "1"            # lazy statics
async-trait  = "0.1"          # async methods in traits
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# ── Cryptography ──────────────────────────────────────────────────────────────
sha2    = "0.10"             # SHA-256 / SHA-512
hmac    = "0.12"             # HMAC-SHA256
md5     = "0.7"              # MD5 hash
hex     = "0.4"              # bytes → hex string
base64  = "0.22"             # Base64 encode / decode
aes-gcm = "0.10"             # AES-256-GCM for Feature 12 (encrypt/decrypt)
cron    = "0.12"             # Cron expression parsing for schedule feature
chrono  = "0.4"              # Date/time for cron scheduling
uuid    = { version = "1", features = ["v4"] }  # UUID generation

[profile.release]
opt-level      = 3
lto            = true
codegen-units  = 1
strip          = true
panic          = "abort"
